hover effect 001 html 주석 작성

--- a/hover_effect_001/index.html
+++ b/hover_effect_001/index.html
@@ -14,6 +14,7 @@
           <p class="video__info__desc">Vimeo님의 동영상, 출처: Pexels</p>
         </div>
         <video class="video__item" loop>
+          <!--직접 영상소스를 넣으셔야합니다.-->
           <source src="./1.webm" type="video/webm" />
         </video>
       </div>
@@ -23,6 +24,7 @@
           <p class="video__info__desc">Oleg Magni님의 동영상, 출처: Pexels</p>
         </div>
         <video class="video__item" loop>
+          <!--직접 영상소스를 넣으셔야합니다.-->
           <source src="./2.webm" type="video/webm" />
         </video>
       </div>
@@ -35,6 +37,7 @@
           </p>
         </div>
         <video class="video__item" loop>
+          <!--직접 영상소스를 넣으셔야합니다.-->
           <source src="./3.webm" type="video/webm" />
         </video>
       </div>
